<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/picture_type_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_type" />

    <Button
        android:id="@+id/text_type_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_type" />

    <Button
        android:id="@+id/lock_type_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_type" />

</LinearLayout>
