<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/male_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/blue_round_bg"
            android:text="@string/male" />

        <Button
            android:id="@+id/female_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/pink_round_bg"
            android:text="@string/female" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="150dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/next_step"/>


</LinearLayout>