<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="敖子龙的主人"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_margin="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/default_photo" />

        <ImageView
            android:layout_width="150dip"
            android:layout_height="150dip"
            android:layout_margin="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/default_photo" />
    </LinearLayout>

    <TextView
        android:id="@+id/email_content_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/recommend_pet_mail_title"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/email_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/recommend_pet_mail_title"
        android:textSize="24dp" />

    <Button
        android:id="@+id/raise_together_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/raise_together" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/close" />

</LinearLayout>